--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 !/.idea/inspectionProfiles/*
 .fleet
 
+.kotlin
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
